--- a/css/style.scss
+++ b/css/style.scss
@@ -580,15 +580,15 @@ a:focus {
 
 // end portfolio section
 
-// team section
+// review section
 
-.team_section {
+.review_section {
 
-  .team_container {
+  .review_container {
     padding: 25px 45px;
   }
 
-  .team_box {
+  .review_box {
     position: relative;
     border-radius: 10px;
     overflow: hidden;
@@ -639,7 +639,7 @@ a:focus {
   }
 }
 
-// end team section
+// end review section
 
 // contact section
 .contact_section {
