--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ body {
 }
 
 .detail_box_common {
-  background-color: #a34318;
+  background-color: #1c818f;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -100,7 +100,7 @@ body {
 
 .sub_page .header_section {
   position: relative;
-  background-color: #85310c;
+  background-color: #0f7280;
 }
 
 .sub_page .header_section .custom_menu-btn span {
@@ -233,7 +233,7 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: rgba(141, 58, 21, 0.95);
+  background-color: rgba(15, 114, 128, 0.95);
   overflow-x: hidden;
   -webkit-transition: 0.5s;
   transition: 0.5s;
@@ -382,10 +382,10 @@ a:focus {
 
 .slider_section .detail-box a {
   display: inline-block;
-  background-color: #85310c;
+  background-color: #0f7280;
   color: #ffffff;
   padding: 10px 45px;
-  border: 1px solid #85310c;
+  border: 1px solid #0f7280;
   border-radius: 0;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -394,7 +394,7 @@ a:focus {
 
 .slider_section .detail-box a:hover {
   background-color: transparent;
-  color: #85310c;
+  color: #0f7280;
 }
 
 .slider_section .img-box {
@@ -434,7 +434,7 @@ a:focus {
           align-items: center;
   font-size: 20px;
   color: #ffffff;
-  background-color: #85310c;
+  background-color: #0f7280;
   -webkit-transition: all .3s;
   transition: all .3s;
 }
@@ -442,7 +442,7 @@ a:focus {
 .slider_section .carousel_btn-box .slider_btn_prev:hover,
 .slider_section .carousel_btn-box .slider_btn_next:hover {
   background-color: #ffffff;
-  color: #85310c;
+  color: #0f7280;
 }
 
 .about_section .heading_container h2 {
@@ -450,7 +450,7 @@ a:focus {
 }
 
 .about_section .detail-box {
-  background-color: #a34318;
+  background-color: #1c818f;
   padding: 0 20px;
 }
 
@@ -460,10 +460,10 @@ a:focus {
 
 .about_section .detail-box a {
   display: inline-block;
-  background-color: #85310c;
+  background-color: #0f7280;
   color: #ffffff;
   padding: 10px 40px;
-  border: 1px solid #85310c;
+  border: 1px solid #0f7280;
   border-radius: 0;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -474,7 +474,7 @@ a:focus {
 .about_section .detail-box a:hover {
   background-color: #ffffff;
   border-color: #ffffff;
-  color: #85310c;
+  color: #0f7280;
 }
 
 .about_section .img-box {
@@ -500,7 +500,7 @@ a:focus {
 }
 
 .portfolio_section .heading_container h2::before {
-  background-color: #85310c;
+  background-color: #0f7280;
 }
 
 .portfolio_section .portfolio_container {
@@ -581,10 +581,10 @@ a:focus {
 
 .portfolio_section .read_btn {
   display: inline-block;
-  background-color: #85310c;
+  background-color: #0f7280;
   color: #ffffff;
   padding: 7px 30px;
-  border: 1px solid #85310c;
+  border: 1px solid #0f7280;
   border-radius: 0;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -594,7 +594,7 @@ a:focus {
 
 .portfolio_section .read_btn:hover {
   background-color: transparent;
-  color: #85310c;
+  color: #0f7280;
 }
 
 .review_section .review_container {
@@ -615,7 +615,7 @@ a:focus {
 .review_section .read_btn {
   display: inline-block;
   background-color: #ffffff;
-  color: #85310c;
+  color: #0f7280;
   padding: 7px 30px;
   border: 1px solid #ffffff;
   border-radius: 0;
@@ -688,7 +688,7 @@ a:focus {
 }
 
 .contact_section .info_contact .contact_link_box a:hover {
-  color: #85310c;
+  color: #0f7280;
 }
 
 .contact_section .info_social {
@@ -715,53 +715,6 @@ a:focus {
 }
 
 .contact_section .info_social a:hover {
-  color: #85310c;
+  color: #0f7280;
 }
 
-/* footer section*/
-.footer_section {
-  background-color: #762500;
-  color: #ffffff;
-  padding: 0 15px;
-}
-
-.footer_section .row {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.footer_section p {
-  margin: 0;
-  padding: 25px 0;
-  color: #ffffff;
-}
-
-.footer_section p a {
-  color: inherit;
-}
-
-.footer_section .link_box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
-.footer_section .link_box a {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: #ffffff;
-  margin-left: 15px;
-}
-
-.footer_section .link_box a:hover {
-  color: #85310c;
-}
-/*# sourceMappingURL=style.css.map */
